Bug 256615 crash when calling nsIThread.state before calling nsIThread.init [@ PR_GetThreadState] patch by cst@andrew.cmu.edu r=dougt